--- a/package.json
+++ b/package.json
@@ -5,16 +5,15 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "seed": "node seedDB.js"
     },
-    "author": "Kwinn",
+    "author": "",
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
         "mongoose": "^5.13.7",
-        "dotenv": "^10.0.0",
-        "morgan": "^1.10.0",
-        "body-parser": "^1.19.0"
+        "sequelize": "^6.35.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.12"
